from concurrent import futures
import socket
import logging
import grpc 

class InterNodeCommunication():
    ''''''
    # these will probably be RPCs
    def get_row_node0(self,r):
        ''''''
        pass

    def get_row_node1(self,r,caller):
        ''''''
        pass
    
    def get_row_node2(self,r):
        ''''''
        pass
    
    def get_row_node3(self,r):
        ''''''
        pass

    def get_row_node4(self,r,caller):
        ''''''
        pass
    def get_row_node5(self,r):
        ''''''
        pass
    def get_row_node6(self,r):
        ''''''
        pass
    def get_row_node7(self,r,caller):
        ''''''
        pass
    def get_row_node8(self,r):
        ''''''
        pass
    def get_col_node0(self,c):
        ''''''
        pass
    def get_col_node1(self,r):
        ''''''
        pass
    def get_col_node2(self,r):
        ''''''
        pass
    def get_col_node3(self,r,caller):
        ''''''
        pass
    def get_col_node4(self,r,caller):
        ''''''
        pass
    def get_col_node5(self,r,caller):
        ''''''
        pass
    def get_col_node6(self,r):
        ''''''
        pass
    def get_col_node7(self,r):
        ''''''
        pass
    def get_col_node8(self,r):
        ''''''
        pass

    def solve_row_one(self):
        ''''''
        pass

    def solve_row_two(self):
        ''''''
        pass

    def solve_row_three(self):
        ''''''
        pass